--- a/exp_must_azure_test/views/components/navbar.hbs
+++ b/exp_must_azure_test/views/components/navbar.hbs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
       <div class="container">
-        <a href="/" class="navbar-brand">Node.js Graph Tutorial</a>
+        <a href="/" class="navbar-brand">Eashire</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
           aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -9,6 +9,11 @@
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
               <a href="/" class="nav-link{{#if active.home}} active{{/if}}">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/ficheposte">
+                <i class="fas fa-external-link-alt mr-1"></i>Fiche de poste
+              </a>
             </li>
             {{#if user}}
               <li class="nav-item" data-turbolinks="false">
