--- a/exp_must_azure_test/views/layouts/main.hbs
+++ b/exp_must_azure_test/views/layouts/main.hbs
@@ -10,6 +10,9 @@
 		href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"
 		crossorigin="anonymous">
 		<link rel='stylesheet' href='/stylesheets/style.css' />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 	</head>
 	<body>
         {{>navbar}}
