[ADD] ficheposte creation missing css/style

--- a/exp_must_azure_test/views/components/navbar.hbs
+++ b/exp_must_azure_test/views/components/navbar.hbs
@@ -12,7 +12,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/ficheposte">
-                <i class="fas fa-external-link-alt mr-1"></i>Fiche de poste
+                Fiche de poste
               </a>
             </li>
             {{#if user}}
