--- a/exp_must_azure_test/views/components/navbar.hbs
+++ b/exp_must_azure_test/views/components/navbar.hbs
@@ -19,6 +19,11 @@
               <li class="nav-item" data-turbolinks="false">
                 <a href="/calendar" class="nav-link{{#if active.calendar}} active{{/if}}">Calendar</a>
               </li>
+              <li class="nav-item">
+                <a href="/dashboard" class="nav-link{{#if active.dashboard}} active{{/if}}">
+                  Dashboard
+                </a>
+              </li>
             {{/if}}
           </ul>
           <ul class="navbar-nav justify-content-end">
