--- a/exp_must_azure_test/views/components/navbar.handlebars
+++ b/exp_must_azure_test/views/components/navbar.handlebars
@@ -1,55 +1,34 @@
-<nav class="bg-slate-900 border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-gray-900">
-      <div>
-        <a href="/" >Eashire</a>
-        <button type="button" data-toggle="collapse" data-target="#navbarCollapse"
-          aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-          <span></span>
-        </button>
-        <div id="navbarCollapse">
-          <ul>
-            <li>
-              <a href="/" class="text-black{{#if active.home}} active{{/if}}">Home</a>
-            </li>
-            <li>
-              <a href="/ficheposte">
-                Fiche de poste
-              </a>
-            </li>
-            {{#if user}}
-              <li data-turbolinks="false">
-                <a href="/calendar" class="{{#if active.calendar}} active{{/if}}">Calendar</a>
-              </li>
-              <li >
-                <a href="/dashboard" class="{{#if active.dashboard}} active{{/if}}">
-                  Dashboard
-                </a>
-              </li>
-            {{/if}}
-          </ul>
-          <ul>
-            {{#if user}}
-              <li>
-                <a data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-                  aria-expanded="false">
-                  {{#if user.avatar}}
-                    <img src="{{ user.avatar }}" style="width: 32px;">
-                  {{else}}
-                    <i style="width: 32px;"></i>
-                  {{/if}}
-                </a>
-                <div >
-                  <h5>{{ user.displayName }}</h5>
-                  <p>{{ user.email }}</p>
-                  <div></div>
-                  <a href="/auth/signout">Sign Out</a>
-                </div>
-              </li>
-            {{else}}
-              <li>
-                <a href="/auth/signin">Sign In</a>
-              </li>
-            {{/if}}
-          </ul>
-        </div>
-      </div>
-    </nav>
+<nav class="bg-slate-800 border-gray-200 px-2 sm:px-4 py-2.5">
+  <div class="container flex flex-wrap justify-between items-center mx-auto">
+    <a href="/" class="flex items-center">
+      <img src="/images/logo_eashire.png" class="mr-3 h-6 sm:h-9" alt="Eashire Logo" />
+      <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Eashire</span>
+    </a>
+    <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+      <ul class="flex flex-col mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium">
+        <li>
+          <a href="/" class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-400 md:p-0 dark:text-white">
+            Home
+          </a>
+        </li>
+      
+        {{#if user}}
+          <li>
+            <a href="/calendar" class="{{#if active.calendar}} active{{/if}} block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Calendar</a>
+          </li>
+          <li>
+            <a href="/dashboard" class="{{#if active.dashboard}} active{{/if}} block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">
+              Dashboard
+            </a>
+          </li>
+        {{else}}
+          <li>
+            <a href="/auth/signin" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Sign In</a>
+          </li>   
+        {{/if}}
+      </ul>
+    </div>
+
+    
+  </div>
+</nav>
