--- a/exp_must_azure_test/views/dashboard.handlebars
+++ b/exp_must_azure_test/views/dashboard.handlebars
@@ -35,7 +35,10 @@
 				<p class="relative md:text-sm md:font-semibold text-blue-700 whitespace-pre-line text-center">depuis</p>
 				<p class="relative md:text-xl md:font-bold whitespace-pre-line text-center">{{userInfos.arrivalDate}}</p>
 			</div>
-
+			<div class="flex flex-col gap-2">
+				<p class="relative md:text-sm md:font-semibold text-blue-700 whitespace-pre-line text-center">depuis</p>
+				<p class="relative md:text-xl md:font-bold whitespace-pre-line text-center">{{userInfos.employeeHireDate}}</p>
+			</div>
 		</div>
 		<div class="basis-1/3 flex flex-col gap-6">
 			<div class="basis-1/2 rounded-md bg-slate-600 shadow-lg"></div>
