--- a/exp_must_azure_test/views/dashboard.handlebars
+++ b/exp_must_azure_test/views/dashboard.handlebars
@@ -28,15 +28,19 @@
 				</button>
 			</a>
 			<div class="flex flex-col gap-2">
-				<p class="relative md:text-sm md:font-semibold text-blue-700 whitespace-pre-line text-center">Poste</p>
+				<p class="relative md:text-sm md:font-semibold text-blue-700 whitespace-pre-line text-center"></p>
+				<p class="relative md:text-xl md:font-bold whitespace-pre-line text-center">Bonjour, {{user.displayName}}</p>
+			</div>
+			<div class="flex flex-col gap-2">
+				<p class="relative md:text-sm md:font-semibold text-blue-700 whitespace-pre-line text-center">Votre poste actuel :</p>
 				<p class="relative md:text-xl md:font-bold whitespace-pre-line text-center">{{userInfos.jobTitle}}</p>
 			</div>
 			<div class="flex flex-col gap-2">
-				<p class="relative md:text-sm md:font-semibold text-blue-700 whitespace-pre-line text-center">depuis</p>
+				<p class="relative md:text-sm md:font-semibold text-blue-700 whitespace-pre-line text-center">Vous êtes chez nous depuis le :</p>
 				<p class="relative md:text-xl md:font-bold whitespace-pre-line text-center">{{userInfos.arrivalDate}}</p>
 			</div>
 			<div class="flex flex-col gap-2">
-				<p class="relative md:text-sm md:font-semibold text-blue-700 whitespace-pre-line text-center">depuis</p>
+				<p class="relative md:text-sm md:font-semibold text-blue-700 whitespace-pre-line text-center">Vous êtes chez nous depuis :</p>
 				<p class="relative md:text-xl md:font-bold whitespace-pre-line text-center">{{userInfos.employeeHireDate}}</p>
 			</div>
 		</div>
