--- a/exp_must_azure_test/views/home.handlebars
+++ b/exp_must_azure_test/views/home.handlebars
@@ -1,11 +1,34 @@
 <div>
-	<h1>Welcome to Eashire</h1>
-	<p>This sample app shows how to use the Microsoft Graph API to access a
-		user's data from Node.js</p>
 	{{#if user}}
-		<h4>Welcome {{user.displayName}}!</h4>
-		<p>Use the navigation bar at the top of the page to get started.</p>
+		<h4>Bienvenue {{user.displayName}}!</h4>
+		<p><br/>Commençons enssemble,<br/></p>
+		<br/>Vous voici sur la page home du site, pour accèder à votre Dashboard cliquez en haut à droite sur Dashboard, vous y retrouvez toutes les ressources nécéssaires à votre poste.
+		</p><br/>
+		<p>Qu'allez vous retrouvez ici ?<br/><br/>
+			<li>
+				Vous cherchez vos documents administratifs ? ils sont ici.
+			</li>
+			<li>
+				Vous venez d'arriver et vous cherchez de la documentations pour vous lancer dans votre nouveau poste ? Vous la trouverez sans nul doute.
+			</li>
+			<li>
+				Vous voulez savoir dans votre équipe qui sont vos collègues ? vous trouverez cette informations.
+			</li>
+			<li>
+				Vous avez eu un EAP recément, votre service RH a mis à votre disposition un résumé avec vos Objectifs annuel ! 
+			</li>
+			<li>
+				Vous vous demandez, mais quels sont mes accès aux ressources de l'entreprise ? en navigant un petit peu vous allez trouver cette information 
+			</li>
+			<li>
+				Vous êtes nouveau ! Et vous ne connaissez pas le lieu ou les personnes ? Dans votre profil vous trouverez le contact de votre Buddy ! Pousez lui toutes les questions que vous souhaitez ! 
+			</li>
+			<li>
+				Et pourquoi pas participer à une pause café avec tous les nouveaux arrivants ! ca serait chouette de faire connaisance non? Des dates organisé par votre service RH sont disponibles ! Inscrivez-vous !
+			</li>
+		</p>
 	{{else}}
-		<a href='/auth/signin'>Click here to sign in</a>
+	<h1>Bienvenue sur le site Eashire</h1>
+		<a href='/auth/signin'>Cliquez ici pour vous connecter</a>
 	{{/if}}
 </div>
