--- a/exp_must_azure_test/views/fichePosteRead.handlebars
+++ b/exp_must_azure_test/views/fichePosteRead.handlebars
@@ -2,6 +2,28 @@
     <div class="grow p-4 max-w-2xl bg-slate-800 rounded-lg border shadow-md sm:p-8">
         <div class="flex justify-between items-center mb-4">
             <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white">Fiche de poste</h5>
+            <div class="flex justify-center gap-6 items-center">
+                <div>Validation </div>
+                {{#if validationRhIsNull}}
+                <div class="flex-shrink-0">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 fill-grey-500" viewBox="0 0 20 20" fill="currentColor">
+                        <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd" />
+                    </svg>
+                </div>
+                {{else if validationRhIsTrue}}
+                <div class="flex-shrink-0">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 fill-lime-500" viewBox="0 0 20 20" fill="currentColor">
+                        <path fill-rule="evenodd" d="M6.267 3.455a3.066 3.066 0 001.745-.723 3.066 3.066 0 013.976 0 3.066 3.066 0 001.745.723 3.066 3.066 0 012.812 2.812c.051.643.304 1.254.723 1.745a3.066 3.066 0 010 3.976 3.066 3.066 0 00-.723 1.745 3.066 3.066 0 01-2.812 2.812 3.066 3.066 0 00-1.745.723 3.066 3.066 0 01-3.976 0 3.066 3.066 0 00-1.745-.723 3.066 3.066 0 01-2.812-2.812 3.066 3.066 0 00-.723-1.745 3.066 3.066 0 010-3.976 3.066 3.066 0 00.723-1.745 3.066 3.066 0 012.812-2.812zm7.44 5.252a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
+                    </svg>
+                </div>
+                {{else if validationRhIsFalse}}
+                <div class="flex-shrink-0">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 fill-red-500" viewBox="0 0 20 20" fill="currentColor">
+                        <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd" />
+                    </svg>
+                </div>
+                {{/if}}
+            </div>
             <p class="text-sm font-medium text-blue-600 dark:text-blue-500">
                 Id : {{fichePoste.id}}
             </p>
@@ -255,5 +277,23 @@
                 {{/if}}
             </ul>
     </div>
+    {{#if rh}}
+    <div class="grow flex justify-center bg-slate-800 gap-6">
+        <a href={{rhValidLink}} class="flex items-center p-3 text-base font-bold text-white bg-lime-700 rounded-lg hover:bg-lime-600 group hover:shadow">
+            <span class="flex-1 whitespace-nowrap">Valider</span>
+        </a>
+        <a href={{rhRefuseLink}} class="flex items-center p-3 text-base font-bold text-white bg-red-700 rounded-lg hover:bg-red-600 group hover:shadow">
+            <span class="flex-1 whitespace-nowrap">Refuser</span>
+        </a>
     </div>
+    {{else if finance}}
+    <div class="grow flex justify-center bg-slate-800 gap-6">
+        <a href={{financeValidLink}} class="flex items-center p-3 text-base font-bold text-white bg-lime-700 rounded-lg hover:bg-lime-600 group hover:shadow">
+            <span class="flex-1 whitespace-nowrap">Valider</span>
+        </a>
+        <a href={{financeRefuseLink}} class="flex items-center p-3 text-base font-bold text-white bg-red-700 rounded-lg hover:bg-red-600 group hover:shadow">
+            <span class="flex-1 whitespace-nowrap">Refuser</span>
+        </a>
+    </div>
+    {{/if}}
 </div>
