--- a/exp_must_azure_test/views/layouts/main.handlebars
+++ b/exp_must_azure_test/views/layouts/main.handlebars
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta charset='utf-8' />
-		<title>Example App</title>
+		<title>Eashire</title>
 		<link rel='stylesheet' href='/stylesheets/style.css' />
 	</head>
 	<body class="h-screen w-screen bg-slate-900 text-slate-300">
