--- a/exp_must_azure_test/views/components/navbar.handlebars
+++ b/exp_must_azure_test/views/components/navbar.handlebars
@@ -11,7 +11,11 @@
             Home
           </a>
         </li>
-      
+        <li>
+          <a href="/joblist" class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-400 md:p-0 dark:text-white">
+            joblist
+          </a>
+        </li>
         {{#if user}}
           <li>
             <a href="/calendar" class="{{#if active.calendar}} active{{/if}} block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Calendar</a>
