[ADD] update ficheposte + [UPDATE] list fiche poste : validation display little state on ficheposte list

--- a/exp_must_azure_test/views/layouts/main.handlebars
+++ b/exp_must_azure_test/views/layouts/main.handlebars
@@ -3,6 +3,7 @@
 		<meta charset='utf-8' />
 		<title>Eashire</title>
 		<link rel='stylesheet' href='/stylesheets/style.css' />
+		<link rel='stylesheet' href='/stylesheets/fichePosteReadStyle.css' />
 	</head>
 	<body class="h-screen w-screen bg-slate-900 text-slate-300">
 		<div class="relative h-screen w-screen">
