--- a/exp_must_azure_test/views/components/managerDashboardSidebar.handlebars
+++ b/exp_must_azure_test/views/components/managerDashboardSidebar.handlebars
@@ -1,4 +1,4 @@
-<aside class="relative w-64 top-6" aria-label="Sidebar">
+<aside class="relative top-6" aria-label="Sidebar">
    <div class="overflow-y-auto py-4 px-3 bg-slate-800 rounded">
       <ul class="space-y-2">
          <li>
