--- a/exp_must_azure_test/views/components/rhDashboardSidebar.handlebars
+++ b/exp_must_azure_test/views/components/rhDashboardSidebar.handlebars
@@ -1,13 +1,4 @@
-{{!-- un bouton Mes fiches de postes
-un bouton Mes fiches de recrutement
-un bouton liste des employé
-Créer une ressource employé
-organiser un event (bouton feature pour plus tard)
-une fonction recherche de candidat ( à voir plus tard) --}}
-
-
-
-<aside class="relative w-64 top-6" aria-label="Sidebar">
+<aside class="relative top-6" aria-label="Sidebar">
    <div class="overflow-y-auto py-4 px-3 bg-slate-800 rounded">
       <ul class="space-y-2">
          <li>
@@ -17,7 +8,9 @@ une fonction recherche de candidat ( à voir plus tard) --}}
                   <path fill-rule="evenodd" d="M4 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v11a2 2 0 01-2 2H6a2 2 0 01-2-2V5zm9.707 5.707a1 1 0 00-1.414-1.414L9 12.586l-1.293-1.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
                </svg>
                <span class="flex-1 ml-3 whitespace-nowrap">Fiches de poste</span>
-               <span class="inline-flex justify-center items-center px-2 ml-3 text-sm font-medium text-gray-800 bg-gray-200 rounded-full dark:bg-gray-700 dark:text-gray-300">Pro</span>
+               {{#compare nbrWaiting 0 operator=">"}}
+               <span class="inline-flex justify-center items-center px-2 ml-3 text-sm font-medium text-gray-800 bg-red-400 rounded-full">{{nbrWaiting}}</span>
+               {{/compare}}
             </a>
          </li>
          <li>
