--- a/exp_must_azure_test/views/fichePosteList.handlebars
+++ b/exp_must_azure_test/views/fichePosteList.handlebars
@@ -1,8 +1,31 @@
 <div class="relative top-6 flex justify-center">
     <div class="grow p-4 max-w-3xl bg-slate-800 rounded-lg border shadow-md sm:p-6">
-        <h5 class="mb-3 text-base font-semibold text-gray-900 lg:text-xl dark:text-white">
-            Liste des fiches de poste
-        </h5>
+        <div class="flex flex-col justify-center items-center">
+            <h5 class="mb-3 text-base font-semibold text-gray-900 lg:text-xl dark:text-white">
+                Liste des fiches de poste
+            </h5>
+            <div class="flex flex-row">
+                <p class="ml-5">En attente de validation</p>
+                <div class="ml-3 flex-shrink-0">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 fill-grey-500" viewBox="0 0 20 20" fill="currentColor">
+                        <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd" />
+                    </svg>
+                </div>
+                <p class="ml-5">Validé</p>
+                <div class="ml-3 flex-shrink-0">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 fill-lime-500" viewBox="0 0 20 20" fill="currentColor">
+                        <path fill-rule="evenodd" d="M6.267 3.455a3.066 3.066 0 001.745-.723 3.066 3.066 0 013.976 0 3.066 3.066 0 001.745.723 3.066 3.066 0 012.812 2.812c.051.643.304 1.254.723 1.745a3.066 3.066 0 010 3.976 3.066 3.066 0 00-.723 1.745 3.066 3.066 0 01-2.812 2.812 3.066 3.066 0 00-1.745.723 3.066 3.066 0 01-3.976 0 3.066 3.066 0 00-1.745-.723 3.066 3.066 0 01-2.812-2.812 3.066 3.066 0 00-.723-1.745 3.066 3.066 0 010-3.976 3.066 3.066 0 00.723-1.745 3.066 3.066 0 012.812-2.812zm7.44 5.252a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
+                    </svg>
+                </div>
+                <p class="ml-5">Refusé</p>
+                <div class="ml-3 flex-shrink-0">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 fill-red-500" viewBox="0 0 20 20" fill="currentColor">
+                        <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd" />
+                    </svg>
+                </div>
+            </div>
+        </div>
+        
         <ul class="my-4 space-y-3">
             {{#each fichePosteList}}
                 <li>
@@ -18,21 +41,36 @@
                             </svg>
                         {{/if}}
                         <span class="flex-1 ml-3 whitespace-nowrap">{{this.label}}</span>
-                        {{#if this.entryDate}}
-                        <span class="flex-1 ml-3 whitespace-nowrap">Entrée  {{this.entryDate}}</span>
-                        {{/if}}
-                        {{#if this.endDate}}
-                        <span class="flex-1 ml-3 whitespace-nowrap">Sortie  {{this.endDate}}</span>
-                        {{/if}}
                         <span class="inline-flex items-center justify-center px-2 py-0.5 ml-3 text-xs font-medium text-gray-500 bg-gray-200 rounded dark:bg-gray-700 dark:text-gray-400">{{this.urgency}}</span>
+                        <div class="ml-6 w-20 bg-slate-100 h-3.5 rounded-[3px] flex items-center">
+
+                        {{#compare this.validationRH 0 operator="=="}}
+                            <div class="bg-grey-400 h-2 rounded" style="width: 33%"></div>
+                        {{else compare this.validationRH 1 operator="=="}}
+                            <div class="bg-green-400 h-2 rounded" style="width: 33%"></div>
+                        {{else compare this.validationRH 2 operator="=="}}
+                            <div class="bg-red-400 h-2 rounded" style="width: 33%"></div>
+                        {{/compare}}
+
+                        {{#compare this.validationFinance 0 operator="=="}}
+                            <div class="bg-grey-400 h-2 rounded" style="width: 33%"></div>
+                        {{else compare this.validationFinance 1 operator="=="}}
+                            <div class="bg-green-400 h-2 rounded" style="width: 33%"></div>
+                        {{else compare this.validationFinance 2 operator="=="}}
+                            <div class="bg-red-400 h-2 rounded" style="width: 33%"></div>
+                        {{/compare}}
+
+                        {{#compare this.publicationRH 0 operator="=="}}
+                            <div class="bg-grey-400 h-2 rounded" style="width: 33%"></div>
+                        {{else compare this.publicationRH 1 operator="=="}}
+                            <div class="bg-green-400 h-2 rounded" style="width: 33%"></div>
+                        {{else compare this.publicationRH 2 operator="=="}}
+                            <div class="bg-red-400 h-2 rounded" style="width: 33%"></div>
+                        {{/compare}}
+                        </div>
                     </a>
                 </li>
             {{/each}}
         </ul>
-        <div>
-            <a href="#" class="inline-flex items-center text-xs font-normal text-gray-500 hover:underline dark:text-gray-400">
-                <svg class="mr-2 w-3 h-3" aria-hidden="true" focusable="false" data-prefix="far" data-icon="question-circle" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"></path></svg>
-                Why do I need to connect with my wallet?</a>
-        </div>
     </div>
 </div>
