[UPDATE] successiv validations/publication. candidature : creation par user non loggé, visualisation par rh (list des candidatures/visualisation d'une candidature)

--- a/exp_must_azure_test/views/home.handlebars
+++ b/exp_must_azure_test/views/home.handlebars
@@ -1,4 +1,7 @@
 <div>
+	{{#if createdCandidature}}
+		<p>Votre candidature a bien étée transmise. Merci !</p>
+	{{/if}}
 	{{#if user}}
 		<h4>Bienvenue {{user.displayName}}!</h4>
 		<p><br/>Commençons enssemble,<br/></p>
