upload and delete

--- a/exp_must_azure_test/views/listfile.handlebars
+++ b/exp_must_azure_test/views/listfile.handlebars
@@ -4,7 +4,12 @@
 
 </a>
 <embed src="/documents/{{this.name}}" width=200 height=100 type='application/pdf'/>
-
-<button>delete</button>
+<form action="/listFile/delete" method="post" >
+    <input type="hidden" name="filename" id="filename" value={{this.name}}>
+    <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">delete</button>
+   
+</form>
 <br>
 {{/each}}
+
+ <a href="/uploadFile">upload un fichier </a>
