--- a/exp_must_azure_test/views/candidatureList.handlebars
+++ b/exp_must_azure_test/views/candidatureList.handlebars
@@ -3,9 +3,7 @@
 		class='grow p-4 max-w-3xl bg-slate-800 rounded-lg border shadow-md sm:p-6'
 	>
 		<div class='flex flex-col justify-center items-center'>
-			<h5
-				class='mb-3 text-base font-semibold text-gray-900 lg:text-xl dark:text-white'
-			>
+			<h5 class='mb-3 text-base font-semibold text-white lg:text-xl'>
 				Liste des candidats
 			</h5>
 			<div class='flex flex-row'>
@@ -62,7 +60,7 @@
 				<li>
 					<a
 						href={{this.readLink}}
-						class='flex items-center p-3 text-base font-bold text-gray-900 bg-gray-50 rounded-lg hover:bg-gray-100 group hover:shadow dark:bg-gray-600 dark:hover:bg-gray-500 dark:text-white'
+						class='flex items-center p-3 text-base font-bold text-white bg-gray-600 rounded-lg hover:bg-gray-500 group hover:shadow'
 					>
 						{{#if this.even}}
 							<svg
