--- a/exp_must_azure_test/views/candidatureRead.handlebars
+++ b/exp_must_azure_test/views/candidatureRead.handlebars
@@ -12,17 +12,17 @@
 	<div class='flex flex-col justify-between p-4 leading-normal'>
 		<div class='grow flex gap-4'>
 			<h5
-				class='mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white'
+				class='mb-2 text-2xl font-bold tracking-tight text-white'
 			>{{candidature.prenom}}</h5>
 			<h5
-				class='mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white'
+				class='mb-2 text-2xl font-bold tracking-tight text-white'
 			>{{candidature.nom}}</h5>
 		</div>
 
-		<p class='mb-3 font-normal text-gray-700 dark:text-gray-400'>
+		<p class='mb-3 font-normal text-gray-400'>
 			{{candidature.mail}}
 		</p>
-		<p class='mb-3 font-normal text-gray-700 dark:text-gray-400'>
+		<p class='mb-3 font-normal text-gray-400'>
 			{{candidature.telephone}}
 		</p>
 	</div>
