--- a/exp_must_azure_test/views/components/destinationServiceModifier.handlebars
+++ b/exp_must_azure_test/views/components/destinationServiceModifier.handlebars
@@ -9,7 +9,7 @@
 		>
 			<svg
 				xmlns='http://www.w3.org/2000/svg'
-				class='w-5 h-5 text-gray-500 dark:text-gray-400'
+				class='w-5 h-5 text-gray-400'
 				viewBox='0 0 20 20'
 				fill='currentColor'
 			>
