--- a/exp_must_azure_test/views/components/endDateModifier.handlebars
+++ b/exp_must_azure_test/views/components/endDateModifier.handlebars
@@ -9,7 +9,7 @@
 		>
 			<svg
 				xmlns='http://www.w3.org/2000/svg'
-				class='w-5 h-5 text-gray-500 dark:text-gray-400'
+				class='w-5 h-5 text-gray-400'
 				viewBox='0 0 20 20'
 				fill='currentColor'
 			>
@@ -33,7 +33,7 @@
 				type='date'
 				id='input_update_endDate'
 				name='input_update_endDate'
-				class='z-20 bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 datepicker-input'
+				class='z-20 bg-gray-700 border border-gray-600 placeholder-gray-400 text-white sm:text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5 datepicker-input'
 				placeholder='Select date'
 			/>
 
