--- a/exp_must_azure_test/views/components/financeDashboardSidebar.handlebars
+++ b/exp_must_azure_test/views/components/financeDashboardSidebar.handlebars
@@ -4,11 +4,11 @@
 			<li>
 				<a
 					href='/dashboard/finance'
-					class='flex items-center p-2 text-base font-normal text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700'
+					class='flex items-center p-2 text-base font-normal text-white rounded-lg hover:bg-gray-700'
 				>
 					<svg
 						aria-hidden='true'
-						class='w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white'
+						class='w-6 h-6 text-gray-400 transition duration-75 group-hover:text-white'
 						fill='currentColor'
 						viewBox='0 0 20 20'
 						xmlns='http://www.w3.org/2000/svg'
@@ -21,11 +21,11 @@
 			<li>
 				<a
 					href='/ficheposte/list'
-					class='flex items-center p-2 text-base font-normal text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700'
+					class='flex items-center p-2 text-base font-normal text-white rounded-lg hover:bg-gray-700'
 				>
 					<svg
 						xmlns='http://www.w3.org/2000/svg'
-						class='flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white'
+						class='flex-shrink-0 w-6 h-6 text-gray-400 transition duration-75 group-hover:text-white'
 						fill='currentColor'
 						viewBox='0 0 20 20'
 					>
@@ -38,18 +38,18 @@
 					</svg>
 					<span class='flex-1 ml-3 whitespace-nowrap'>Fiches de poste</span>
 					<span
-						class='inline-flex justify-center items-center px-2 ml-3 text-sm font-medium text-gray-800 bg-gray-200 rounded-full dark:bg-gray-700 dark:text-gray-300'
+						class='inline-flex justify-center items-center px-2 ml-3 text-sm font-medium text-gray-300 bg-gray-700 rounded-full'
 					>Pro</span>
 				</a>
 			</li>
 			<li>
 				<a
 					href='#'
-					class='flex items-center p-2 text-base font-normal text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700'
+					class='flex items-center p-2 text-base font-normal text-white rounded-lg hover:bg-gray-700'
 				>
 					<svg
 						xmlns='http://www.w3.org/2000/svg'
-						class='flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white'
+						class='flex-shrink-0 w-6 h-6 text-gray-400 transition duration-75 group-hover:text-white'
 						fill='currentColor'
 						viewBox='0 0 20 20'
 					>
@@ -60,18 +60,18 @@
 					<span class='flex-1 ml-3 whitespace-nowrap'>Mes employés
 						archives</span>
 					<span
-						class='inline-flex justify-center items-center p-3 ml-3 w-3 h-3 text-sm font-medium text-blue-600 bg-blue-200 rounded-full dark:bg-blue-900 dark:text-blue-200'
+						class='inline-flex justify-center items-center p-3 ml-3 w-3 h-3 text-sm font-medium text-blue-200 bg-blue-900 rounded-full'
 					>3</span>
 				</a>
 			</li>
 			<li>
 				<a
 					href='#'
-					class='flex items-center p-2 text-base font-normal text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700'
+					class='flex items-center p-2 text-base font-normal text-white rounded-lg hover:bg-gray-700'
 				>
 					<svg
 						xmlns='http://www.w3.org/2000/svg'
-						class='flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white'
+						class='flex-shrink-0 w-6 h-6 text-gray-400 transition duration-75 group-hover:text-white'
 						fill='currentColor'
 						viewBox='0 0 20 20'
 					>
