--- a/exp_must_azure_test/views/components/navbar.handlebars
+++ b/exp_must_azure_test/views/components/navbar.handlebars
@@ -2,32 +2,32 @@
   <div class="container flex flex-wrap justify-between items-center mx-auto">
     <a href="/" class="flex items-center">
       <img src="/images/logo_eashire.png" class="mr-3 h-6 sm:h-9" alt="Eashire Logo" />
-      <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Eashire</span>
+      <span class="self-center text-xl font-semibold whitespace-nowrap text-white">Eashire</span>
     </a>
     <div class="hidden w-full md:block md:w-auto" id="navbar-default">
       <ul class="flex flex-col mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium">
         <li>
-          <a href="/" class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-400 md:p-0 dark:text-white">
+          <a href="/" class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-400 md:p-0">
             Home
           </a>
         </li>
         <li>
-          <a href="/joblist" class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-400 md:p-0 dark:text-white">
+          <a href="/joblist" class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-400 md:p-0">
             joblist
           </a>
         </li>
         {{#if user}}
           <li>
-            <a href="/calendar" class="{{#if active.calendar}} active{{/if}} block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Calendar</a>
+            <a href="/calendar" class="{{#if active.calendar}} active{{/if}} block py-2 pr-4 pl-3 text-gray-400 border-b border-gray-700 hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-white hover:text-white">Calendar</a>
           </li>
           <li>
-            <a href="/dashboard" class="{{#if active.dashboard}} active{{/if}} block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">
+            <a href="/dashboard" class="{{#if active.dashboard}} active{{/if}} block py-2 pr-4 pl-3 text-gray-400 border-b border-gray-700 hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:p-0 md:hover:text-white hover:text-white">
               Dashboard
             </a>
           </li>
         {{else}}
           <li>
-            <a href="/auth/signin" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Sign In</a>
+            <a href="/auth/signin" class="block py-2 pr-4 pl-3 text-gray-400 border-b border-gray-700 hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:p-0 md:hover:text-white hover:text-white">Sign In</a>
           </li>   
         {{/if}}
       </ul>
