--- a/exp_must_azure_test/views/components/rhDashboardSidebar.handlebars
+++ b/exp_must_azure_test/views/components/rhDashboardSidebar.handlebars
@@ -4,11 +4,11 @@
 			<li>
 				<a
 					href='/ficheposte/list'
-					class='flex items-center p-2 text-base font-normal text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700'
+					class='flex items-center p-2 text-base font-normal text-white rounded-lg hover:bg-gray-700'
 				>
 					<svg
 						xmlns='http://www.w3.org/2000/svg'
-						class='flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white'
+						class='flex-shrink-0 w-6 h-6 text-gray-400 transition duration-75 group-hover:text-white'
 						fill='currentColor'
 						viewBox='0 0 20 20'
 					>
@@ -30,11 +30,11 @@
 			<li>
 				<a
 					href='#'
-					class='flex items-center p-2 text-base font-normal text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700'
+					class='flex items-center p-2 text-base font-normal text-white rounded-lg hover:bg-gray-700'
 				>
 					<svg
 						xmlns='http://www.w3.org/2000/svg'
-						class='flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white'
+						class='flex-shrink-0 w-6 h-6 text-gray-400 transition duration-75 group-hover:text-white'
 						fill='currentColor'
 						viewBox='0 0 20 20'
 					>
@@ -53,11 +53,11 @@
 			<li>
 				<a
 					href='/candidature/list'
-					class='flex items-center p-2 text-base font-normal text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700'
+					class='flex items-center p-2 text-base font-normal text-white rounded-lg hover:bg-gray-700'
 				>
 					<svg
 						xmlns='http://www.w3.org/2000/svg'
-						class='flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white'
+						class='flex-shrink-0 w-6 h-6 text-gray-400 transition duration-75 group-hover:text-white'
 						viewBox='0 0 20 20'
 						fill='currentColor'
 					>
@@ -71,11 +71,11 @@
 			<li>
 				<a
 					href='#'
-					class='flex items-center p-2 text-base font-normal text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700'
+					class='flex items-center p-2 text-base font-normal text-white rounded-lg hover:bg-gray-700'
 				>
 					<svg
 						xmlns='http://www.w3.org/2000/svg'
-						class='flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white'
+						class='flex-shrink-0 w-6 h-6 text-gray-400 transition duration-75 group-hover:text-white'
 						fill='currentColor'
 						viewBox='0 0 20 20'
 					>
@@ -89,11 +89,11 @@
 			<li>
 				<a
 					href='#'
-					class='flex items-center p-2 text-base font-normal text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700'
+					class='flex items-center p-2 text-base font-normal text-white rounded-lg hover:bg-gray-700'
 				>
 					<svg
 						xmlns='http://www.w3.org/2000/svg'
-						class='flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white'
+						class='flex-shrink-0 w-6 h-6 text-gray-400 transition duration-75 group-hover:text-white'
 						fill='currentColor'
 						viewBox='0 0 20 20'
 					>
@@ -111,11 +111,11 @@
 			<li>
 				<a
 					href='#'
-					class='flex items-center p-2 text-base font-normal text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700'
+					class='flex items-center p-2 text-base font-normal text-white rounded-lg hover:bg-gray-700'
 				>
 					<svg
 						xmlns='http://www.w3.org/2000/svg'
-						class='flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white'
+						class='flex-shrink-0 w-6 h-6 text-gray-400 transition duration-75 group-hover:text-white'
 						fill='currentColor'
 						viewBox='0 0 20 20'
 					>
