--- a/exp_must_azure_test/views/candidature.handlebars
+++ b/exp_must_azure_test/views/candidature.handlebars
@@ -19,107 +19,107 @@
 </form> --}}
 
 <div class='w-4/5 m-auto'>
-	<h2>Dossier de candidature</h2>
+    <h2>Dossier de candidature</h2>
 
-	<p>Poste voulu : {{fichePoste.label}}</p>
+    <p>Poste voulu : {{fichePoste.label}}</p>
 
-	<div class='flex justify-center gap-6 m-4'>
-		<a
-			href={{fichePosteLink}}
-			class='flex items-center p-2 text-sm font-bold text-white bg-blue-700 rounded-lg hover:bg-blue-600 group hover:shadow'
-		>
-			<span class='flex-1 whitespace-nowrap'>Voir la fiche de poste</span>
-		</a>
-	</div>
+    <div class='flex justify-center gap-6 m-4'>
+        <a
+                href={{fichePosteLink}}
+                class='flex items-center p-2 text-sm font-bold text-white bg-blue-700 rounded-lg hover:bg-blue-600 group hover:shadow'
+        >
+            <span class='flex-1 whitespace-nowrap'>Voir la fiche de poste</span>
+        </a>
+    </div>
 
-	<form method='post' action={{candidateLink}} enctype='multipart/form-data'>
-		<div class='grid md:grid-cols-2 md:gap-6'>
-			<div class='relative z-0 mb-6 w-full group'>
-				<input
-					type='text'
-					name='candidature_nom'
-					id='candidature_nom'
-					class='block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer'
-					placeholder=' '
-					required=''
-				/>
-				<label
-					for='candidature_nom'
-					class='peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6'
-				>Nom de famille</label>
-			</div>
+    <form method='post' action={{candidateLink}} enctype='multipart/form-data'>
+        <div class='grid md:grid-cols-2 md:gap-6'>
+            <div class='relative z-0 mb-6 w-full group'>
+                <input
+                        type='text'
+                        name='candidature_nom'
+                        id='candidature_nom'
+                        class='block py-2.5 px-0 w-full text-sm text-white bg-transparent border-0 border-b-2 border-gray-600 appearance-none focus:border-blue-500 focus:outline-none focus:ring-0 peer'
+                        placeholder=' '
+                        required=''
+                />
+                <label
+                        for='candidature_nom'
+                        class='peer-focus:font-medium absolute text-sm text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6'
+                >Nom de famille</label>
+            </div>
 
-			<div class='relative z-0 mb-6 w-full group'>
-				<input
-					type='text'
-					name='candidature_prenom'
-					id='candidature_prenom'
-					class='block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer'
-					placeholder=' '
-					required=''
-				/>
-				<label
-					for='candidature_prenom'
-					class='peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6'
-				>Prénom</label>
-			</div>
-		</div>
+            <div class='relative z-0 mb-6 w-full group'>
+                <input
+                        type='text'
+                        name='candidature_prenom'
+                        id='candidature_prenom'
+                        class='block py-2.5 px-0 w-full text-sm text-white bg-transparent border-0 border-b-2 border-gray-600 appearance-none focus:outline-none focus:ring-0 focus:border-blue-500 peer'
+                        placeholder=' '
+                        required=''
+                />
+                <label
+                        for='candidature_prenom'
+                        class='peer-focus:font-medium absolute text-sm text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6'
+                >Prénom</label>
+            </div>
+        </div>
 
-		<div class='grid md:grid-cols-2 md:gap-6'>
-			<div class='relative z-0 mb-6 w-full group'>
-				<input
-					type='email'
-					name='candidature_mail'
-					id='candidature_mail'
-					class='block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer'
-					placeholder=' '
-					required=''
-				/>
-				<label
-					for='candidature_mail'
-					class='peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6'
-				>Email</label>
-			</div>
+        <div class='grid md:grid-cols-2 md:gap-6'>
+            <div class='relative z-0 mb-6 w-full group'>
+                <input
+                        type='email'
+                        name='candidature_mail'
+                        id='candidature_mail'
+                        class='block py-2.5 px-0 w-full text-sm text-white bg-transparent border-0 border-b-2 border-gray-600 appearance-none focus:border-blue-500 focus:outline-none focus:ring-0 peer'
+                        placeholder=' '
+                        required=''
+                />
+                <label
+                        for='candidature_mail'
+                        class='peer-focus:font-medium absolute text-sm text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6'
+                >Email</label>
+            </div>
 
-			<div class='relative z-0 mb-6 w-full group'>
-				<input
-					type='tel'
-					name='candidature_telephone'
-					id='candidature_telephone'
-					class='block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer'
-					placeholder=' '
-					required=''
-				/>
-				<label
-					for='candidature_telephone'
-					class='peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6'
-				>Numéro de téléphone</label>
-			</div>
-		</div>
+            <div class='relative z-0 mb-6 w-full group'>
+                <input
+                        type='tel'
+                        name='candidature_telephone'
+                        id='candidature_telephone'
+                        class='block py-2.5 px-0 w-full text-sm text-white bg-transparent border-0 border-b-2 border-gray-600 appearance-none focus:outline-none focus:ring-0 focus:border-blue-500 peer'
+                        placeholder=' '
+                        required=''
+                />
+                <label
+                        for='candidature_telephone'
+                        class='peer-focus:font-medium absolute text-sm text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6'
+                >Numéro de téléphone</label>
+            </div>
+        </div>
 
-		<div class='relative z-0 mb-6 w-full group'>
-			<label
-				class='block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300'
-				for='candidature_CV'
-			>Votre CV</label>
-			<input
-				class='block w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 cursor-pointer dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400'
-				id='candidature_CV'
-				name='candidature_CV'
-				type='file'
-			/>
-		</div>
+        <div class='relative z-0 mb-6 w-full group'>
+            <label
+                    class='block mb-2 text-sm font-medium text-gray-300'
+                    for='candidature_CV'
+            >Votre CV</label>
+            <input
+                    class='block w-full text-sm text-gray-400 bg-gray-700 rounded-lg border border-gray-600 cursor-pointer focus:outline-none placeholder-gray-400'
+                    id='candidature_CV'
+                    name='candidature_CV'
+                    type='file'
+            />
+        </div>
 
-		<input
-			name='ficheposteid'
-			id='ficheposteid'
-			type='hidden'
-			value='{{fichePoste.id}}'
-		/>
+        <input
+                name='ficheposteid'
+                id='ficheposteid'
+                type='hidden'
+                value='{{fichePoste.id}}'
+        />
 
-		<button
-			type='submit'
-			class='text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800'
-		>Envoyer votre candidature</button>
-	</form>
+        <button
+                type='submit'
+                class='text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-800 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center'
+        >Envoyer votre candidature</button>
+    </form>
 </div>
