--- a/exp_must_azure_test/views/layouts/main.handlebars
+++ b/exp_must_azure_test/views/layouts/main.handlebars
@@ -13,8 +13,7 @@
 					<div role='alert'>
 						<p >{{this.message}}</p>
 						{{#if this.debug}}
-							<pre><code
-								>{{this.debug}}</code></pre>
+							<pre><code>{{this.debug}}</code></pre>
 						{{/if}}
 					</div>
 				{{/each}}
