--- a/exp_must_azure_test/views/components/navbar.handlebars
+++ b/exp_must_azure_test/views/components/navbar.handlebars
@@ -7,12 +7,12 @@
     <div class="hidden w-full md:block md:w-auto" id="navbar-default">
       <ul class="flex flex-col mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium">
         <li>
-          <a href="/" class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-400 md:p-0">
+          <a href="/" class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-400">
             Home
           </a>
         </li>
         <li>
-          <a href="/joblist" class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-400 md:p-0">
+          <a href="/joblist" class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-400">
             joblist
           </a>
         </li>
@@ -21,13 +21,13 @@
             <a href="/calendar" class="{{#if active.calendar}} active{{/if}} block py-2 pr-4 pl-3 text-gray-400 border-b border-gray-700 hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-white hover:text-white">Calendar</a>
           </li>
           <li>
-            <a href="/dashboard" class="{{#if active.dashboard}} active{{/if}} block py-2 pr-4 pl-3 text-gray-400 border-b border-gray-700 hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:p-0 md:hover:text-white hover:text-white">
+            <a href="/dashboard" class="{{#if active.dashboard}} active{{/if}} block py-2 pr-4 pl-3 text-gray-400 border-b border-gray-700 hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-white hover:text-white">
               Dashboard
             </a>
           </li>
         {{else}}
           <li>
-            <a href="/auth/signin" class="block py-2 pr-4 pl-3 text-gray-400 border-b border-gray-700 hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:p-0 md:hover:text-white hover:text-white">Sign In</a>
+            <a href="/auth/signin" class="block py-2 pr-4 pl-3 text-gray-400 border-b border-gray-700 hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-white hover:text-white">Sign In</a>
           </li>   
         {{/if}}
       </ul>
