--- a/exp_must_azure_test/views/fichePosteUpdate.handlebars
+++ b/exp_must_azure_test/views/fichePosteUpdate.handlebars
@@ -91,6 +91,8 @@
 		<option value='TRES-URGENT'>TRES-URGENT</option>
 	</select>
 	</br>
+	<a href="http://localhost:8090/ficheposte/list">
 
 	<input type='submit' value='Créer la fiche de poste' />
+	</a>
 </form>
