--- a/exp_must_azure_test/views/fichePosteRead.handlebars
+++ b/exp_must_azure_test/views/fichePosteRead.handlebars
@@ -751,6 +751,11 @@
 						</li>
 					{{/if}}
 				</ul>
+                <a href="http://localhost:8090/ficheposte/list">
+                   <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">
+                          retour
+                    </button>
+                </a>
 			</div>
 			{{#if rh}}
 				{{#compare fichePoste.validationFinance 0 operator="=="}}
