ajout du logout + correction fautes

--- a/exp_must_azure_test/views/home.handlebars
+++ b/exp_must_azure_test/views/home.handlebars
@@ -12,13 +12,13 @@
 				Vous cherchez vos documents administratifs ? ils sont ici.
 			</li>
 			<li>
-				Vous venez d'arriver et vous cherchez de la documentations pour vous lancer dans votre nouveau poste ? Vous la trouverez sans nul doute.
+				Vous venez d'arriver et vous cherchez de la documentation pour vous lancer dans votre nouveau poste ? Vous la trouverez sans nul doute.
 			</li>
 			<li>
 				Vous voulez savoir dans votre équipe qui sont vos collègues ? vous trouverez cette informations.
 			</li>
 			<li>
-				Vous avez eu un EAP recément, votre service RH a mis à votre disposition un résumé avec vos Objectifs annuel ! 
+				Vous avez eu un EAP recément, votre service RH a mis à votre disposition un résumé avec vos Objectifs annuels ! 
 			</li>
 			<li>
 				Vous vous demandez, mais quels sont mes accès aux ressources de l'entreprise ? en navigant un petit peu vous allez trouver cette information 
@@ -27,7 +27,7 @@
 				Vous êtes nouveau ! Et vous ne connaissez pas le lieu ou les personnes ? Dans votre profil vous trouverez le contact de votre Buddy ! Pousez lui toutes les questions que vous souhaitez ! 
 			</li>
 			<li>
-				Et pourquoi pas participer à une pause café avec tous les nouveaux arrivants ! ca serait chouette de faire connaisance non? Des dates organisé par votre service RH sont disponibles ! Inscrivez-vous !
+				Et pourquoi pas participer à une pause café avec tous les nouveaux arrivants ! ca serait chouette de faire connaisance non? Des dates organisées par votre service RH sont disponibles ! Inscrivez-vous !
 			</li>
 		</p>
 	{{else}}
