--- a/exp_must_azure_test/views/components/navbar.handlebars
+++ b/exp_must_azure_test/views/components/navbar.handlebars
@@ -13,21 +13,26 @@
         </li>
         <li>
           <a href="/joblist" class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-400">
-            joblist
+            Offre d'emplois
           </a>
         </li>
         {{#if user}}
           <li>
-            <a href="/calendar" class="{{#if active.calendar}} active{{/if}} block py-2 pr-4 pl-3 text-gray-400 border-b border-gray-700 hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-white hover:text-white">Calendar</a>
+            <a href="/calendar" class="{{#if active.calendar}} active{{/if}} block py-2 pr-4 pl-3 text-gray-400 border-b border-gray-700 hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-white hover:text-white">Calendrier</a>
           </li>
           <li>
             <a href="/dashboard" class="{{#if active.dashboard}} active{{/if}} block py-2 pr-4 pl-3 text-gray-400 border-b border-gray-700 hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-white hover:text-white">
               Dashboard
             </a>
           </li>
+          <li>
+            <a href="/auth/signout" class="{{#if active.dashboard}} active{{/if}} block py-2 pr-4 pl-3 text-gray-400 border-b border-gray-700 hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-white hover:text-white">
+              Deconnexion
+            </a>
+          </li>
         {{else}}
           <li>
-            <a href="/auth/signin" class="block py-2 pr-4 pl-3 text-gray-400 border-b border-gray-700 hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-white hover:text-white">Sign In</a>
+            <a href="/auth/signin" class="block py-2 pr-4 pl-3 text-gray-400 border-b border-gray-700 hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-white hover:text-white">Connexion</a>
           </li>   
         {{/if}}
       </ul>
